modified:   backend/app/app.js 	modified:   backend/app/commenti.js 	new file:   backend/app/commentiNonVisualizzati.js 	new file:   backend/app/commentiVisualizzati.js 	modified:   backend/app/models/schemaCommento.js 	modified:   swagger.yaml
Giorno: 11/06/2023
User Story:
Numero: 18
Nome: Design API e Implementazione metodo REST  +Visualizzazione informazione oggetto
Task: Visualizzazione commenti inseriti
Commenti:
Inserimento nelle API del path GET /commentiNonVisualizzati per
permettere di ottenere i commenti associati al giocatore

Inserimento nelle API del path POST /commentiVisualizzati per
permettere di visualizzare un commento

Implementazione dei relativo metodo di routing nel file commentiVisualizzati.js
e commentiNonVisualizzati.js

Inserimento nello schema di un documento di tipo Commento del campo di tipo
boolean “visualizzato”

Verifica del funzionamento con Postman
